--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:codetutorial.database.windows.net,1433;Initial Catalog=fiorello;Persist Security Info=False;User ID=bglyvv;Password=Kb3060466;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "{your connection string}"
   }
 }
